--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/chart.js": "^2.9.22",
     "angular-bootstrap-md": "^9.3.1",
     "angular-in-memory-web-api": "^0.11.0",
+    "angularx-qrcode": "^2.3.5",
     "animate.css": "^4.1.0",
     "bson": "^4.0.4",
     "chart.js": "^2.5.0",
