--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "chart.js": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "jspdf": "^1.5.3",
     "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
+    "ng2-pdf-viewer": "^6.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
