--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "@fortawesome/fontawesome-free": "^5.13.1",
+    "@rxweb/reactive-form-validators": "^2.0.0",
     "@types/chart.js": "^2.9.22",
     "@types/html2canvas": "0.0.35",
     "@types/jspdf": "^1.3.3",
