--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~10.0.6",
     "@angular/cdk": "^10.0.0",
     "@angular/common": "~10.0.6",
@@ -24,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@rxweb/reactive-form-validators": "^2.0.0",
     "@types/chart.js": "^2.9.22",
+    "@types/googlemaps": "^3.39.11",
     "@types/html2canvas": "0.0.35",
     "@types/jspdf": "^1.3.3",
     "angular-bootstrap-md": "^9.3.1",
@@ -37,6 +39,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "ng2-pdf-viewer": "^6.3.2",
+    "ngx-color-picker": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
