--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@rxweb/reactive-form-validators": "^2.0.0",
     "@types/chart.js": "^2.9.22",
     "@types/googlemaps": "^3.39.11",
-    "@types/html2canvas": "0.0.35",
     "@types/jspdf": "^1.3.3",
+    "@types/html2canvas": "0.0.35",
+    "@types/stripe-checkout": "^1.0.3",
+    "@types/stripe-v3": "^3.1.20",
     "angular-bootstrap-md": "^9.3.1",
     "angular-in-memory-web-api": "^0.11.0",
     "angularx-qrcode": "^2.3.5",
