--- a/package.json
+++ b/package.json
@@ -12,48 +12,48 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
-    "@angular/animations": "~10.0.6",
-    "@angular/cdk": "^10.0.0",
-    "@angular/common": "~10.0.6",
-    "@angular/compiler": "~10.0.6",
-    "@angular/core": "~10.0.6",
-    "@angular/forms": "~10.0.6",
-    "@angular/material": "^10.0.0",
-    "@angular/platform-browser": "~10.0.6",
-    "@angular/platform-browser-dynamic": "~10.0.6",
-    "@angular/router": "~10.0.6",
-    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@angular/animations": "^10.0.11",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "^10.0.11",
+    "@angular/compiler": "^10.0.11",
+    "@angular/core": "^10.0.11",
+    "@angular/forms": "^10.0.11",
+    "@angular/material": "^10.1.3",
+    "@angular/platform-browser": "^10.0.11",
+    "@angular/platform-browser-dynamic": "^10.0.11",
+    "@angular/router": "^10.0.11",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@rxweb/reactive-form-validators": "^2.0.0",
-    "@types/chart.js": "^2.9.22",
-    "@types/googlemaps": "^3.39.11",
-    "@types/jspdf": "^1.3.3",
+    "@types/chart.js": "^2.9.24",
+    "@types/googlemaps": "^3.39.13",
     "@types/html2canvas": "0.0.35",
+    "@types/jspdf": "^1.3.3",
     "@types/stripe-checkout": "^1.0.3",
     "@types/stripe-v3": "^3.1.20",
     "angular-bootstrap-md": "^9.3.1",
     "angular-in-memory-web-api": "^0.11.0",
     "angularx-qrcode": "^2.3.5",
     "animate.css": "^4.1.0",
-    "bson": "^4.0.4",
-    "chart.js": "^2.5.0",
+    "bson": "^4.1.0",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "html2canvas": "^1.0.0-rc.5",
+    "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^1.5.3",
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-color-picker": "^10.0.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.2",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular/cli": "~10.0.4",
-    "@angular/compiler-cli": "~10.0.6",
+    "@angular-devkit/build-angular": "^0.1000.7",
+    "@angular/cli": "^10.0.7",
+    "@angular/compiler-cli": "^10.0.11",
     "@types/bson": "^4.0.2",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.54",
     "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
@@ -65,7 +65,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.9.7"
   }
 }
