--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angular-in-memory-web-api": "^0.11.0",
     "angularx-qrcode": "^2.3.5",
     "animate.css": "^4.1.0",
+    "bootstrap": "^4.5.2",
     "bson": "^4.1.0",
     "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
