--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^1.5.3",
+    "ng-animate": "^0.3.4",
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-color-picker": "^10.0.1",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.1",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
