--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-color-picker": "^10.0.1",
     "rxjs": "^6.6.2",
+    "sweetalert2": "^10.3.5",
     "tslib": "^2.0.1",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
